# admet-mga

./: .gitignore  README.md  pyproject.toml
.omc/: project-memory.json
.omc/state/: agent-replay-5af2d875-0216-4a5d-ba83-6bb11cabf87f.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  mission-state.json  subagent-tracking.json
_legacy/: apply_interpretation_legacy.py  interpretation_app_legacy.py
config/: config_admet.yaml  config_admet_clas.yaml  config_admet_deeppk.yaml  hyperparam.yaml  model_config.json
notebooks/examples/: inference.ipynb
scripts/: inference.py  prepare_data.py  train.py
serve/: Dockerfile  app.py  docker-compose.yml  environment.yaml
src/mga/: __init__.py
src/mga/cli/: __init__.py  evaluate.py  inference.py  prepare_data.py  train.py
src/mga/config/: __init__.py  config.py
src/mga/data/: __init__.py  collate.py  dataset.py  features.py  tdc_fetcher.py  validation.py
src/mga/inference/: __init__.py  formatter.py  predictor.py  task_registry.py  visualization.py
src/mga/metrics/: __init__.py  meter.py
src/mga/models/: __init__.py  heads.py  layers.py  mga.py
src/mga/training/: __init__.py  callbacks.py  losses.py  trainer.py  transfer.py
src/mga/utils/: __init__.py  checkpoint.py  compat.py  logging.py  seed.py
tests/: conftest.py  test_config.py  test_data.py  test_formatter.py  test_inference_smoke.py  test_losses.py  test_model.py  test_registry.py  test_training.py  test_transfer.py
